[package]
name = "mhrice"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
murmur3 = "0.5"
zstd = "0.10"
once_cell = "1.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typed-html = { git = "https://github.com/bodil/typed-html.git" }
chrono = "0.4"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
futures = "0.3"
tokio = { version = "1" }
regex = "1.5"
rayon = "1.5"
bitflags = "1.2"
nalgebra-glm = { version = "0.16", features = ["serde-serialize"]}
glium = "0.31"
png = "0.17"
ordered-float = "2.1"
half = "1.7"
compress = "0.2"
astc-decode = "0.3"
num-bigint = "0.4"
base64 = "0.13"
minidump = { git = "https://github.com/wwylele/rust-minidump.git" }

[build-dependencies]
built = { version = "0.5", features = ["git2"] }
