[package]
name = "mhrice"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
murmur3 = "0.5"
zstd = "0.11"
once_cell = "1.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typed-html = { git = "https://github.com/wwylele/typed-html.git" }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
rusoto_core = "0.48"
rusoto_s3 = "0.48"
bytes = "*"
futures = "0.3"
tokio = { version = "1" }
regex = "1.5"
rayon = "1.5"
bitflags = "1.2"
nalgebra-glm = { version = "0.17", features = ["serde-serialize"]}
nalgebra = "*"
glium = "0.32"
png = "0.17"
ordered-float = "3"
half = "2.1"
compress = "0.2"
astc-decode = "0.3"
num-bigint = "0.4"
base64 = "0.13"
minidump = "0.14"
quick-xml = "0.26"
md-5 = "0.10"

[build-dependencies]
built = { version = "0.5", features = ["git2"] }
